[workspace]
members = [
    "programs/*"
]

resolver = "2"

[workspace.dependencies]
# Pin to versions compatible with BPF toolchain Cargo 1.75
block-buffer = "=0.10.4"
crypto-common = "=0.1.6"
digest = "=0.10.7"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
