[package]
name = "pulse-subscription"
version = "0.1.0"
description = "On-chain subscription program for Pulse Analytics"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pulse_subscription"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
